1.FLY-2633 UAT_Workbench: when user clicks on "Source field" text box, fields should be auto populated issue fixed 2.Workbench: when user clicks on "field name" text box, fields should be auto populated issue fixed 3.Workbench: when user click on + icon button, if fields are empty don't add  validation is added issue fixed

--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -754,3 +754,23 @@
     }
   }
 }
+
+.source-field-dropdown.dropdown-menu.content-menu li a {
+  line-height: 40px;
+  padding: 0 10px;
+  color: #202124;
+  font-size: 14px;
+  text-decoration: none!important;
+  display: block;
+  cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+}
+
+.kr-sg-input-text.input-box.show,.kr-sg-input-text.input-box .position-relative.show {
+  .dropdown-menu{
+    display: block !important;
+  }
+}
