--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -267,8 +267,13 @@
                   <div class="label-text" *ngIf="map.operation === 'rename'">
                     Field Name
                   </div>
-                  <input type="text" placeholder="Enter Target" maxlength="60" (keyup)="changesDetected = true" class="input-text"
+                  <input type="text" placeholder="Enter Target" maxlength="60" (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input"  data-toggle="dropdown"
                     [(ngModel)]="map.source_field" />
+                    <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu">
+                      <perfect-scrollbar class="scroll-search-field">
+                          <li *ngFor="let suggesition of fields | filter : [map.source_field, 'fieldName'] " (click)="map.source_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
+                      </perfect-scrollbar>
+                  </ul>
                 </div>
                 <div class="kr-sg-input-text col-4 input-box">
                   <div class="label-text" *ngIf="map.operation === 'copy'">
@@ -277,13 +282,20 @@
                   <div class="label-text" *ngIf="map.operation === 'rename'">
                     New Name
                   </div>
-                  <div class="label-text" *ngIf="
+                  <div class="label-text 22" *ngIf="
                       map.operation !== 'copy' && map.operation !== 'rename'
                     ">
-                    Field Name
+                    Field Name 
                   </div>
-                  <input type="text" placeholder="Enter Target" maxlength="60" (keyup)="changesDetected = true" class="input-text"
+                  <div class="position-relative">
+                    <input type="text" placeholder="Enter Target" maxlength="60" (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown"
                     [(ngModel)]="map.target_field" />
+                    <ul class="source-field-dropdown dropdown-menu content-menu" *ngIf="map.operation !== 'copy' && map.operation !== 'rename'" id="fields-search-with-dropdown-menu">
+                      <perfect-scrollbar class="scroll-search-field">
+                          <li *ngFor="let suggesition of fields | filter : [map.target_field, 'fieldName'] " (click)="map.target_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
+                      </perfect-scrollbar>
+                  </ul>
+                  </div>
                 </div>
                 <div class="kr-sg-input-text col-4 input-box" (keyup)="changesDetected = true" *ngIf="
                     map.operation !== 'remove' &&
@@ -372,12 +384,19 @@
                   newMappingObj.field_mapping.defaultValue.operation ===
                   'rename'
                 ">
-                Field Name
+                Field Name 
               </div>
-              <input type="text" placeholder="Enter Source Field" maxlength="60" (keyup)="changesDetected = true" class="input-text"
+              <div class="position-relative">
+                <input type="text" placeholder="Enter Source Field" maxlength="60" (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown"
                 [(ngModel)]="
                   newMappingObj.field_mapping.defaultValue.source_field
                 " />
+                <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu">
+                  <perfect-scrollbar class="scroll-search-field">
+                      <li *ngFor="let suggesition of fields | filter : [newMappingObj.field_mapping.defaultValue.source_field, 'fieldName'] " (click)="newMappingObj.field_mapping.defaultValue.source_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
+                  </perfect-scrollbar>
+              </ul>
+              </div>
             </div>
             <div class="kr-sg-input-text col-4 input-box">
               <div class="label-text" *ngIf="
@@ -397,11 +416,25 @@
                   newMappingObj.field_mapping.defaultValue.operation !==
                     'rename'
                 ">
-                Field Name
+                Field Name 
               </div>
-              <input type="text" placeholder="Enter Name" class="input-text" maxlength="60" [(ngModel)]="
+              <div class="position-relative">
+                <input type="text" placeholder="Enter Name" class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown" maxlength="60" [(ngModel)]="
                   newMappingObj.field_mapping.defaultValue.target_field
                 " />
+              <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu" *ngIf="
+              newMappingObj.field_mapping.defaultValue.operation !==
+                'copy' &&
+              newMappingObj.field_mapping.defaultValue.operation !==
+                'rename'
+            ">
+                <perfect-scrollbar class="scroll-search-field">
+                    <li *ngFor="let suggesition of fields | filter : [newMappingObj.field_mapping.defaultValue.target_field, 'fieldName'] " (click)="newMappingObj.field_mapping.defaultValue.target_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
+                </perfect-scrollbar>
+            </ul>
+              </div>
+              
+                
             </div>
             <div class="kr-sg-input-text col-4 input-box" *ngIf="
                 newMappingObj.field_mapping.defaultValue.operation !==
@@ -428,7 +461,7 @@
               <img (click)="setResetNewMappingsObj()" src="assets/images/close-cross.svg" />
             </div>
             <div class="add_icon" (click)="
-                addFiledmappings(newMappingObj.field_mapping.defaultValue)
+                addFiledmappings(newMappingObj.field_mapping.defaultValue,true)
               ">
               <img src="assets/images/add-input-field.svg" />
             </div>
@@ -457,8 +490,13 @@
                 </div>
                 <div class="kr-sg-input-text col-4 input-box">
                   <div class="label-text">Source Field</div>
-                  <input type="text" placeholder="Value" maxlength="60" (keyup)="changesDetected = true" class="input-text"
+                  <input type="text" placeholder="Value" maxlength="60" (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input"  data-toggle="dropdown"
                     [(ngModel)]="map.source_field" />
+                    <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu">
+                      <perfect-scrollbar class="scroll-search-field">
+                          <li *ngFor="let suggesition of fields | filter : [map.source_field, 'fieldName'] " (click)="map.source_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
+                      </perfect-scrollbar>
+                  </ul>
                 </div>
                 <div class="kr-sg-dropdowns col-4 input-box" *ngIf="selectedStage.type === 'semantic_meaning'">
                   <div class="label-text">Choose Model</div>
@@ -584,9 +622,14 @@
             ">
             <div class="kr-sg-input-text col-4 input-box">
               <div class="label-text">Source Field</div>
-              <input type="text" placeholder="Value" class="input-text" maxlength="60" [(ngModel)]="
+              <input type="text" placeholder="Value"class="input-text dropdown-toggle dropdown-input"  data-toggle="dropdown" maxlength="60" [(ngModel)]="
                   newMappingObj[selectedStage.type].defaultValue.source_field
                 " />
+                <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu">
+                  <perfect-scrollbar class="scroll-search-field">
+                      <li *ngFor="let suggesition of fields | filter : [newMappingObj[selectedStage.type].defaultValue.source_field, 'fieldName'] " (click)="newMappingObj[selectedStage.type].defaultValue.source_field = suggesition.fieldName"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
+                  </perfect-scrollbar>
+              </ul>
             </div>
             <div class="kr-sg-dropdowns col-4 input-box" *ngIf="selectedStage.type === 'semantic_meaning'">
               <div class="label-text">Choose Model</div>
@@ -720,7 +763,7 @@
               <img (click)="setResetNewMappingsObj()" src="assets/images/close-cross.svg" />
             </div>
             <div class="add_icon" (click)="
-                addFiledmappings(newMappingObj[selectedStage.type].defaultValue)
+                addFiledmappings(newMappingObj[selectedStage.type].defaultValue,true)
               ">
               <img src="assets/images/add-input-field.svg" />
             </div>
