--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1009,7 +1009,8 @@ input:focus{
   padding: 0px 10px;
   border-right: 1px solid #E4E5E7;
   flex-shrink: 0;
-  margin-top: 80px;
+  margin-top: 70px;
+  /* margin-top: 80px; */
   max-height: calc(100vh - 248px);
   overflow: auto;
   position: relative;
@@ -1160,6 +1161,10 @@ input:focus{
   position: relative;
 }
 .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details #top-down-tab-sec{
+  /* padding-bottom: 22px; */
+  padding-bottom: 12px;
+}
+.topdown-search-main-container .all-result-container.center-align-filter .full-results-data-container .all-product-details #top-down-tab-sec {
   padding-bottom: 22px;
 }
 .top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .filters-added-data .facets-padding{
@@ -1686,7 +1691,7 @@ float: right;
   display: inline-block;
   width: calc(100% - 40px);
   margin: 0px 5px;
-  padding-bottom: 8px;
+  padding-bottom: 0px;
   /* border-bottom: 1px solid #E4E5E7; */
   }
   .topdown-search-main-container .horizantal-filter-sec .dropdown_custom_filter {
@@ -2487,6 +2492,9 @@ display: none !important;
 }
 .top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec {
   padding: 9px 0 0 20px;
+}
+.top-down-search-background-div .topdown-search-main-container .all-result-container.center-align-filter .full-results-data-container .all-product-details .content-data-sec {
+  padding: 1px 0 0 20px;
 }
 .top-down-search-background-div .topdown-search-main-container .all-result-container.right-align-filter .full-results-data-container .all-product-details .tab-sec {
   padding: 20px 10px 14px;
