--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -94,7 +94,7 @@
                                     <div class="main-title">SearchAssist Apps</div>
                                     <div class="apps-block">
                                         <div class="title-secondary">Recent Apps</div>
-                                        <div class="app-name-block" *ngFor='let app of recentApps' (click)="openApp(app);myDrop.close()">
+                                        <div class="app-name-block" *ngFor='let app of recentApps' (click)="app.disabled?null:[openApp(app),myDrop.close()]" [ngStyle]="app.disabled&&{'opacity':'0.4','cursor':'default'}" placement="top-center" [ngbTooltip]="app.disableReason" [container]='"body"' tooltipClass="metrics_tooltips m-0">
                                             <div class="app-name">{{app.name}}</div>
                                             <div class="shared-name d-none">{{app.createdBy===userId?'My App':'Shared by '+app.userDetails.fullName}}</div>
                                         </div>                                                       
