--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -6,7 +6,7 @@
         </div>
     <perfect-scrollbar class="empty-scroll">
     <div  class="empty-landing-screen">
-      <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()"src="assets/images/credentials-empty.svg"></div>
+      <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()"src="assets\images\credEmpty.svg"></div>
       <ng-container *ngIf="loadImageText">
           <div class="empty-title">{{"credentials.no_configured_credentials" | translate}}</div>
           <div class="desc-text"> {{"credentials.cred_info_text" | translate}}
