--- a/findly-builder/src/app/components/apps-home/apps-home.scss
+++ b/findly-builder/src/app/components/apps-home/apps-home.scss
@@ -339,14 +339,14 @@
                 position: relative;
                 display: table;
                 cursor: pointer;
-                transition: 0.3s all ease-in;
+                transition: 0.2s all ease-in;
                 background: #FFFFFF;
                 border: 0px solid #BDC1C6;
                 box-sizing: border-box;
-                border-radius: 6px;
-                box-shadow: 0px -4px 80px rgba(0, 0, 0, 0.07), 0px -1.48494px 6.91958px rgba(0, 0, 0, 0.0186561);    
+                border-radius: 6px;                
+                box-shadow: 0px -4px 80px rgba(0, 0, 0, 0.07), 0px -1.48494px 6.91958px rgba(0, 0, 0, 0.0186561);
                 width: 255px;
-                max-width: 255px;
+                max-width: 255px;            
                 .flag{
                     position: absolute;
                     right: 16px;
@@ -362,7 +362,8 @@
                     // transform: scale(1.03);
                     z-index: 1;
                     position: relative;
-                    background: #F3F8FF;
+                    // background: #F3F8FF;
+                    box-shadow: 0px 4px 12px 2px rgba(32, 33, 36, 0.12);
                     .flag{
                         display: block;
                     }
