FLY-2643 UAT_BotActions: Even though the bot is already linked, 'Link' option is displayed in the Edit configuration page issue fixed

--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -278,7 +278,7 @@
     </div>
   </perfect-scrollbar>
   <div class="modal-footer">
-    <button class="kr-sg-button-primary btn_lg" (click)='saveLink()'>Link</button>
+    <button class="kr-sg-button-primary btn_lg" (click)='saveLink()'>{{editConfigMode?'Save':'Link'}}</button>
     <button class="kr-sg-button-secondary btn_lg" (click)="closeBotsConfigurationModalElement()">Back</button>
 </div>
 </kr-modal>
