--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -602,3 +602,9 @@
         }
     }
 }   
+
+.link-bot-disable.link-bot-btn{
+    background: #EFF0F1 !important;
+    color: #BDC1C6 !important;
+    cursor: not-allowed !important;
+}
